added actual html instead of just 'gay'

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-gay
+<html>
+<head>
+<title>gab</title>
+<meta description="a site 4 gab" />
+<link rel="stylesheet" type=text/css href="style.css"></style>
+</head>
+
+<body>
+<div id="wrapper">
+  <div id="sidebar">
+    <p>sidebear HERW</p>
+  </div>
+
+  <div id="content">
+    <h1 id="marq">GAB IS KEWL!!!!</h1>
+    <p>neat sutf fhere</p>
+  </div>
+
+  <div id="slefie">
+    <p>but FRIST,, let mE take a slefie</p>
+  </div>
+</div>
+</body>
+</html>
