an actual home page

--- a/index.html
+++ b/index.html
@@ -2,23 +2,33 @@
 <head>
 <title>gab</title>
 <meta description="a site 4 gab" />
-<link rel="stylesheet" type=text/css href="style.css"></style>
+<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type=text/css href="static/style.css"></style>
 </head>
 
 <body>
-<div id="wrapper">
-  <div id="sidebar">
-    <p>sidebear HERW</p>
-  </div>
+<div class="page-wrapper">
+    <div class="splash">
+        <div id="name">
+            <span>Gabie</span>      
+        </div>
+        <div id="intro">
+            <p><a>games</a>,</p>
+            <p><a>brains</a>, and</p>
+            <p>making <a>things</a>.</p>
+        </div>
+    </div>
 
-  <div id="content">
-    <h1 id="marq">GAB IS KEWL!!!!</h1>
-    <p>neat sutf fhere</p>
-  </div>
-
-  <div id="slefie">
-    <p>but FRIST,, let mE take a slefie</p>
-  </div>
+    <div id="nav">
+        <ul id="links">
+            <li><a>contact</a></li>
+            <li><a href="http://github.com/vandine">github</a></li>
+            <li><a>resume</a></li>
+        </ul>
+    </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
