--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
 <body>
 <div class="page-wrapper">
     <div class="splash">
-        <div id="name">
-            <span>Gabie</span>      
+        <div class="intro-header" id="intro">
+            <span id="name">Gabie</span>
+            <div>
+            <p><a class="type" id="game">games</a>,</p>
+            <p><a class="type" id="brain">brains</a>, and</p>
+            <p>making <a class="type" id="thing">things</a>.</p>
+            </div>
         </div>
-        <div id="intro">
-            <p><a>games</a>,</p>
-            <p><a>brains</a>, and</p>
-            <p>making <a>things</a>.</p>
+        <div class="indepth" id="games">
+            <a class="cancel">back</a>
+            <h1>games</h1>
+        </div>
+        <div class="indepth" id="brains">
+            <a class="cancel">back</a>
+            <h1>brains</h1>
+        </div>
+        <div class="indepth" id="making">
+            <a class="cancel">back</a>
+            <h1>making things</h1>
         </div>
     </div>
 
@@ -29,6 +41,6 @@
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="script.js"></script>
+<script src="static/script.js"></script>
 </body>
 </html>
